Corrected content shifting when vertical scrollbar appears

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,8 @@ $heading-font-family: "Open Sans", sans-serif;
 
 html,
 body {
+  width: 100vw;
+  min-width: 100%;
   padding: 0;
   margin: 0;
   font-family: $body-font-family;
@@ -55,8 +57,7 @@ button {
 .layout {
   display: flex;
   justify-content: center;
-  width: 100hw;
-  min-width: 100%;
+  width: 100%;
 }
 
 .centered {
